--- a/src/app/Modal/modal.component.html
+++ b/src/app/Modal/modal.component.html
@@ -26,7 +26,10 @@
             ></app-buy-freespins>
             <app-bonus-type *ngIf="data.modal.currentModal == 'bonus_type'" [data]="activeModal" (onAction)="bubbleAction($event)"></app-bonus-type>
             <app-bonus-win *ngIf="data.modal.currentModal == 'bonus_win'" [data]="activeModal" (onAction)="bubbleAction($event)"></app-bonus-win>
-            <app-game-information *ngIf="data.modal.currentModal == 'game_info'"></app-game-information>
+            <app-game-information
+                *ngIf="data.modal.currentModal == 'game_info'"
+                [data]="data.game.infoObject"
+                [selectedBet]="data.game.selectedBet"></app-game-information>
         </div>
     </div>
 </div>
