--- a/src/app/Modal/game-information/game-information.component.scss
+++ b/src/app/Modal/game-information/game-information.component.scss
@@ -37,80 +37,96 @@
                     align-items: center;
                     margin-left: 15px;
                     .item {
-                        width: 350px;
-                        height: 200px;
-                        background-color: #3E0007;
-                        border: 3px solid #1ccf0b;
-                        border: 15px solid transparent;
-                        border-image: url('../../../assets/borders/side.svg') 35 round;
-                        border-radius: 11px;
-                        -webkit-box-sizing: border-box;
-                        -moz-box-sizing: border-box;
-                        box-sizing: border-box;
+                        width: 500px;
+                        height: 220px;
+                        background: linear-gradient(#fe8900 0%, #de2115 50%, #fe8900 100%);
+                        border-radius: 10px;
                         display: flex;
-                        justify-content: space-between;
+                        justify-content: center;
                         align-items: center;
                         &:last-child {
                             margin-top: 10px;
                         }
-                        .symbol {
-                            width: 180px;
-                            height: 150px;
-                            background-position: center;
-                            background-repeat: no-repeat;
-                            background-size: contain;
-                            &.star {
-                                background-image: url('../../../assets/symbols/star.svg');
+                        &:not(.star) {
+                            .symbol {
+                                flex: 1;
                             }
-                            &.dollar {
-                                background-image: url('../../../assets/symbols/dollar.svg');
-                            }
-                            &.seven {
-                                background-image: url('../../../assets/symbols/seven.svg');
-                            }
-                            &.grape {
-                                background-image: url('../../../assets/symbols/grape.svg');
-                            }
-                            &.wintry {
-                                background-image: url('../../../assets/symbols/wintry.svg');
-                            }
-                            &.bell {
-                                background-image: url('../../../assets/symbols/bell.svg');
+                            .info {
+                                flex: 1;
                             }
                         }
-                        .info {
-                            overflow: hidden;
+                        .item_cont {
+                            width: calc(100% - 10px);
+                            height: calc(100% - 10px);
+                            border-radius: 10px;
+                            background-color: #3E0006;
+                            -webkit-box-sizing: border-box;
+                            -moz-box-sizing: border-box;
+                            box-sizing: border-box;
                             display: flex;
-                            justify-content: space-evenly;
-                            flex-direction: column;
+                            justify-content: center;
                             align-items: center;
-                            width: 100%;
-                            height: 100%;
-                            .ammount_count {
+                            .symbol {
+                                width: 180px;
+                                height: 150px;
+                                background-position: center;
+                                background-repeat: no-repeat;
+                                background-size: contain;
+                                &.star {
+                                    background-image: url('../../../assets/symbols/star.svg');
+                                }
+                                &.dollar {
+                                    background-image: url('../../../assets/symbols/dollar.svg');
+                                }
+                                &.seven {
+                                    background-image: url('../../../assets/symbols/seven.svg');
+                                }
+                                &.grape {
+                                    background-image: url('../../../assets/symbols/grape.svg');
+                                }
+                                &.wintry {
+                                    background-image: url('../../../assets/symbols/wintry.svg');
+                                }
+                                &.bell {
+                                    background-image: url('../../../assets/symbols/bell.svg');
+                                }
+                            }
+                            .info {
+                                overflow: hidden;
                                 display: flex;
-                                justify-content: space-between;
+                                justify-content: space-evenly;
+                                flex-direction: column;
                                 align-items: center;
                                 width: 100%;
-                                &.info_text {
-                                    font-size: 18px;
-                                    color: #fff;
-                                    text-align: center;
-                                    text-transform: uppercase;
-                                    padding: 10px;
-                                    padding-top: 30px;
-                                    font-weight: 900;
-                                    padding: 30px;
-                                    padding-top: 0px;
-                                }
-                                .count {
-                                    font-size: 25px;
-                                    font-weight: 900;
-                                    color: #FCE800;
-                                }
-                                .ammount {
-                                    font-size:30px;
-                                    font-weight: 900;
-                                    color: #fff;
+                                height: 100%;
+                                .ammount_count {
+                                    display: flex;
+                                    justify-content: space-between;
+                                    align-items: center;
+                                    width: 100%;
+                                    &.info_text {
+                                        font-size: 18px;
+                                        color: #fff;
+                                        text-align: center;
+                                        text-transform: uppercase;
+                                        padding: 10px;
+                                        padding-top: 30px;
+                                        font-weight: 900;
+                                        padding: 30px;
+                                        padding-top: 20px;
+                                    }
+                                    .count {
+                                        font-size: 25px;
+                                        font-weight: 900;
+                                        color: #FCE800;
+                                        padding-left: 15px;
+                                    }
+                                    .ammount {
+                                        font-size:30px;
+                                        font-weight: 900;
+                                        color: #fff;
+                                        padding-right: 15px;
+                                    }
                                 }
                             }
                         }
@@ -121,30 +137,33 @@
                         justify-content: center;
                         align-items: center;
                         .item {
-                            width: 715px;
-                            .symbol {
-                                width: 350px;
-                                height: 168px;
-                                background-position: center;
-                                background-repeat: no-repeat;
-                                background-size: contain;
-                                margin: 0px 5px;
-                                &.cherry {
-                                    background-image: url('../../../assets/symbols/cherry.svg');
+                            width: 1015px;
+                            height: 230px;
+                            .item_cont {
+                                .symbol {
+                                    width: 350px;
+                                    height: 168px;
+                                    margin: 0px 5px;
+                                    &.cherry {
+                                        background-image: url('../../../assets/symbols/cherry.svg');
+                                    }
+                                    &.lemon {
+                                        background-image: url('../../../assets/symbols/lemon.svg');
+                                    }
+                                    &.plum {
+                                        background-image: url('../../../assets/symbols/plum.svg');
+                                    }
+                                    &.orange {
+                                        background-image: url('../../../assets/symbols/orange.svg');
+                                    }
                                 }
-                                &.lemon {
-                                    background-image: url('../../../assets/symbols/lemon.svg');
-                                }
-                                &.plum {
-                                    background-image: url('../../../assets/symbols/plum.svg');
-                                }
-                                &.orange {
-                                    background-image: url('../../../assets/symbols/orange.svg');
-                                }
-                            }
-                            .ammount_count {
-                                &.info_text {
-                                    padding-top: 15px;
+                                .info {
+                                    flex: 2;
+                                    .ammount_count {
+                                        &.info_text {
+                                            padding-top: 15px;
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -154,72 +173,60 @@
                         justify-content: center;
                         align-items: center;
                         .item {
-                            width: 350px;
-                            height: 410px;
-                            background-color: #3E0007;
-                            border: 3px solid #1ccf0b;
-                            border: 15px solid transparent;
-                            border-image: url('../../../assets/borders/side.svg') 35 round;
-                            border-radius: 11px;
-                            -webkit-box-sizing: border-box;
-                            -moz-box-sizing: border-box;
-                            box-sizing: border-box;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            flex-direction: column;
-                            .symbol {
-                                width: 150px;
-                                height: 150px;
-                                background-position: center;
-                                background-repeat: no-repeat;
-                                background-size: contain;
-                                &.leaf {
-                                    background-image: url('../../../assets/symbols/leaf.svg');
+                            width: 500px;
+                            height: 460px;
+                            .item_cont {
+                                flex-direction: column;
+                                .symbol {
+                                    width: 150px;
+                                    height: 150px;
+                                    &.leaf {
+                                        background-image: url('../../../assets/symbols/leaf.svg');
+                                    }
                                 }
-                            }
-                            .info_text {
-                                font-size: 18px;
-                                color: #fff;
-                                text-align: center;
-                                text-transform: uppercase;
-                                padding: 10px;
-                                padding-top: 30px;
-                                font-weight: 900;
-                            }
-                            hr {
-                                width: 90%;
-                                height: 3px;
-                                background-color: #fff;
-                            }
-                            .exept {
-                                display: flex;
-                                justify-content: center;
-                                align-items: center;
-                                margin-top: 25px;
-                                .small_symbol {
-                                    width: 60px;
-                                    height: 60px;
-                                    background-position: center;
-                                    background-repeat: no-repeat;
-                                    background-size: contain;
-                                    &.star {
-                                        background-image: url('../../../assets/symbols/star.svg');
-                                    }
-                                    &.dollar {
-                                        background-image: url('../../../assets/symbols/dollar.svg');
-                                    }
-                                    &.seven {
-                                        background-image: url('../../../assets/symbols/seven.svg');
-                                    }
-                                    &.dollar {
-                                        background-image: url('../../../assets/symbols/dollar.svg');
-                                    }
-                                    &.dollar {
-                                        background-image: url('../../../assets/symbols/dollar.svg');
-                                    }
-                                    &.dollar {
-                                        background-image: url('../../../assets/symbols/dollar.svg');
+                                .info_text {
+                                    font-size: 18px;
+                                    color: #fff;
+                                    text-align: center;
+                                    text-transform: uppercase;
+                                    padding: 10px;
+                                    padding-top: 30px;
+                                    font-weight: 900;
+                                }
+                                hr {
+                                    width: 90%;
+                                    height: 3px;
+                                    background-color: #fff;
+                                }
+                                .exept {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    margin-top: 25px;
+                                    .small_symbol {
+                                        width: 60px;
+                                        height: 60px;
+                                        background-position: center;
+                                        background-repeat: no-repeat;
+                                        background-size: contain;
+                                        &.star {
+                                            background-image: url('../../../assets/symbols/star.svg');
+                                        }
+                                        &.dollar {
+                                            background-image: url('../../../assets/symbols/dollar.svg');
+                                        }
+                                        &.seven {
+                                            background-image: url('../../../assets/symbols/seven.svg');
+                                        }
+                                        &.dollar {
+                                            background-image: url('../../../assets/symbols/dollar.svg');
+                                        }
+                                        &.dollar {
+                                            background-image: url('../../../assets/symbols/dollar.svg');
+                                        }
+                                        &.dollar {
+                                            background-image: url('../../../assets/symbols/dollar.svg');
+                                        }
                                     }
                                 }
                             }
