--- a/src/app/Views/game-container/game-container.component.scss
+++ b/src/app/Views/game-container/game-container.component.scss
@@ -11,6 +11,9 @@
     }
 }
 
+
+
+
 @media only screen and (max-width: 1600px) {
     .container {
         width: 1100px;
@@ -26,11 +29,13 @@
     }
 }
 
+/*
 @media only screen and (max-width: 1400px) {
     .container {
         width: 1000px;
     }
 }
+*/
 
 @media only screen and (max-width: 920px) {
     .container {
