--- a/src/app/Views/lines/lines.component.scss
+++ b/src/app/Views/lines/lines.component.scss
@@ -132,6 +132,9 @@
     }
 }
 
+
+
+/*
 @media only screen and (max-width: 1600px) {
     .cont {
         width: 50px;
@@ -376,3 +379,5 @@
         }
     }
 }
+
+*/
